<resources>
    <string name="app_name" translatable="false">Ekal Arogya</string>
    <string name="generic_the_flipping_word_next" translatable="false">Next</string>
    <string name="hint_required" translatable="false">Required</string>
    <string name="hint_optional" translatable="false">Optional</string>
    <string name="tag_optional" translatable="false">optional</string>
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_yes">Yes</string>
    <string name="generic_no">No</string>
    <string name="generic_back" translatable="false">Back</string>
    <string name="generic_coming_soon" translatable="false">Coming Soon.....</string>
    <string name="action_print" translatable="false">Print</string>
    <string name="action_sms" translatable="false">Sms</string>
    <string name="action_home" translatable="false">Home</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="generic_warning" translatable="false">Warning!</string>
    <string name="generic_update" translatable="false">Update</string>
    <string name="generic_deleted" translatable="false">Deleted</string>
    <string name="db_first_name" translatable="false">first_name</string>
    <string name="db_middle_name" translatable="false">middle_name</string>
    <string name="db_last_name" translatable="false">last_name</string>
    <string name="db_dob" translatable="false">date_of_birth</string>
    <string name="db_phone_number" translatable="false">phone_number</string>
    <string name="db_address_line1" translatable="false">address1</string>
    <string name="db_address_line2" translatable="false">address2</string>
    <string name="db_city" translatable="false">city_village</string>
    <string name="db_state" translatable="false">state_province</string>
    <string name="db_postal_code" translatable="false">postal_code</string>
    <string name="db_country" translatable="false">country</string>
    <string name="db_gender" translatable="false">gender</string>
    <string name="db_patient_id1" translatable="false">patient_identifier1</string>
    <string name="db_patient_id2" translatable="false">patient_identifier2</string>
    <string name="db_patient_id3" translatable="false">patient_identifier3</string>
    <string name="title_activity_login" translatable="false">Ekal Arogya</string>
    <string name="prompt_email" translatable="false">Username</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="prompt_admin_password" translatable="false">Admin Password</string>
    <string name="action_sign_in" translatable="false">Login</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="url_invalid" translatable="false">Check your URL.</string>
    <string name="prefix_invalid" translatable="false">Select a different prefix!</string>
    <string name="error_invalid_email" translatable="false">This username is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">please check username and password entered</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="error_network" translatable="false">Network Error</string>
    <string name="error_location_not_selected" translatable="false">Please select a value form the location dropdown</string>
    <string name="error_location_not_fetched" translatable="false">Unable to fetch locations</string>
    <string name="permission_rationale" translatable="false">Contacts permissions are needed for providing email completions.
    </string>
    <string name="device_id" translatable="false">Device ID:</string>
    <string name="cant_login_user" translatable="false">Can\'t log in?</string>
    <string name="email_link" translatable="false">Please contact your System Administrator to reset your password or send an email to support@intelehealth.io</string>
    <string name="contact_whatsapp">Please contact your System Administrator to reset your password</string>
    <string name="title_home_screen" translatable="false">Home</string>
    <string name="button_new_pt">New Patient</string>
    <string name="button_find_pt" translatable="false">Find Patient</string>
    <string name="button_diagnostic_tests" translatable="false">Diagnostic Tests</string>
    <string name="button_active_pt" translatable="false">Active Patients</string>
    <string name="menu_option_sync" translatable="false">Refresh Data</string>
    <string name="menu_option_settings" translatable="false">Settings</string>
    <string name="menu_option_end_of_day" translatable="false">End of Day</string>
    <string name="menu_option_logout" translatable="false">Logout</string>
    <string name="menu_option_hw_profile" translatable="false">User Profile</string>
    <string name="title_activity_identification" translatable="false">Add New Patient</string>
    <string name="identification_screen_prompt_first_name">First name *</string>
    <string name="identification_screen_prompt_middle_name">Middle name</string>
    <string name="identification_screen_prompt_last_name">Last name *</string>
    <string name="identification_screen_prompt_address">Address line 1</string>
    <string name="identification_screen_prompt_address2">Address line 2</string>
    <string name="identification_screen_prompt_phone_number">Phone number</string>
    <string name="admin_password_dialog_heading" translatable="false">Enter Admin Password</string>
    <string name="identification_screen_prompt_gender" translatable="false">Gender *</string>
    <string name="identification_screen_checkbox_male">Male</string>
    <string name="identification_screen_checkbox_female">Female</string>
    <string name="identification_screen_prompt_birthday">Date of birth*</string>
    <string name="identification_screen_prompt_age">Age:</string>
    <string name="identification_screen_prompt_time">Time:</string>
    <string name="identification_screen_prompt_city">Village/Town/City *</string>
    <string name="identification_screen_prompt_state">State *</string>
    <string name="identification_screen_prompt_caste" translatable="false">Caste</string>
    <string name="identification_screen_prompt_economic_status" translatable="false">Economic status</string>
    <string name="identification_screen_prompt_education" translatable="false">Education level</string>
    <string name="identification_screen_prompt_country" translatable="false">Country *</string>
    <string name="identification_screen_prompt_postal_code" translatable="false">Postal code</string>
    <string name="identification_screen_prompt_relationship" translatable="false">Son/Daughter/Wife of</string>
    <string name="identification_screen_prompt_occupation" translatable="false">Occupation</string>
    <string name="identification_screen_snack_patient_created" translatable="false">Patient created! Uploading to server.</string>
    <string name="identification_screen_error_data_fields" translatable="false">Error: data fields are not formatted correctly</string>
    <string name="identification_screen_dialog_age" translatable="false">Please enter age in years</string>
    <string name="identification_screen_dialog_error_dob" translatable="false">Date of birth is set for date after today</string>
    <string name="identification_screen_dialog_error_gender" translatable="false">Gender is not selected</string>
    <string name="identification_screen_required_fields" translatable="false">Please enter required fields</string>
    <string name="identification_screen_error_dob" translatable="false">Enter a valid DOB</string>
    <string name="identification_screen_error_age" translatable="false">Enter a valid age</string>
    <string name="identification_screen_text_years" translatable="false"> years </string>
    <string name="identification_screen_text_months" translatable="false"> months</string>
    <string name="identification_screen_picker_years" translatable="false">years</string>
    <string name="identification_screen_picker_hours" translatable="false">hours</string>
    <string name="identification_screen_picker_months" translatable="false">months</string>
    <string name="identification_screen_picker_minute" translatable="false">minute</string>
    <string name="title_activity_active_patient" translatable="false">Active Visits</string>
    <string name="title_activity_get_patient_history" translatable="false">Patient History</string>
    <string name="title_activity_search_patient" translatable="false">Patient Lookup</string>
    <string name="title_activity_complaint_select" translatable="false">Select Complaints</string>
    <string name="title_activity_complaint_questions" translatable="false">Answer All Questions</string>
    <string name="title_activity_complaint_node">Select Complaints</string>
    <string name="complaint_category_selected" translatable="false">Selected Categories:</string>
    <string name="complaint_complaint_selected" translatable="false">Selected Complaints:</string>
    <string name="complaint_dialog_title">Reason for visit</string>
    <string name="complaint_required" translatable="false">Complaint must be selected!</string>
    <string name="title_activity_question_node" translatable="false">QuestionNodeActivity</string>
    <string name="complaint_change_selected" translatable="false">Modify</string>
    <string name="question_answer_all" translatable="false">Are you sure you have answered all questions.</string>
    <string name="question_answer_all_phy_exam" translatable="false">Please answer all general exam questions.</string>
    <string name="question_duration_picker" translatable="false">Please enter duration</string>
    <string name="question_text_input" translatable="false">Please enter text</string>
    <string name="question_date_picker" translatable="false">Please select date</string>
    <string name="question_location_picker" translatable="false">Please select locations</string>
    <string name="question_number_picker" translatable="false">Please enter number</string>
    <string name="question_area_picker" translatable="false">Please enter the area (width X length)</string>
    <string name="question_range_picker" translatable="false">Please enter a range</string>
    <string name="question_frequency_picker" translatable="false">Please enter how many times</string>
    <string name="title_activity_vitals" translatable="false">Vitals</string>
    <string name="table_hw" translatable="false">Body Measurements</string>
    <string name="table_height" translatable="false">Height (cm)</string>
    <string name="table_weight" translatable="false">Weight (kg)</string>
    <string name="table_bmi" translatable="false">BMI </string>
    <string name="table_pulse" translatable="false">Pulse (bpm)</string>
    <string name="table_bp" translatable="false">Vital Signs</string>
    <string name="table_bpsys" translatable="false">BP Sys</string>
    <string name="table_bpdia" translatable="false">BP Dia</string>
    <string name="table_temp" translatable="false">Temperature (C)</string>
    <string name="table_spo2" translatable="false">SpO2 (%)</string>
    <string name="search_hint" translatable="false">Type to search patient by name…</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="new_patient">New Patient</string>
    <string name="find_patient">Find Patients</string>
    <string name="video_library">Video Library</string>
    <string name="lastsync">lastsync</string>
    <string name="today_visits">Today\'s Visits</string>
    <string name="active_visits">Active Visits</string>
    <string name="Whatsapp_Help_Cardview">Help</string>
    <string name="refresh">Refresh</string>
</resources>