<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.homeActivity.HomeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.homeActivity.HomeActivity"
        tools:showIn="@layout/activity_home">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_newpat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/iv_new_patient"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="TODO"
                            app:srcCompat="@drawable/ic_person_add_24dp" />

                        <TextView
                            android:id="@+id/newPatient_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_new_patient"
                            android:text="@string/new_patient"
                            android:layout_centerHorizontal="true"
                            android:includeFontPadding="false"
                            android:fontFamily="@font/lato_medium"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_find_patient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/iv_find_patient"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="TODO"
                            app:srcCompat="@drawable/ic_search_24dp" />

                        <TextView
                            android:id="@+id/findPatients_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/iv_find_patient"
                            android:text="@string/find_patient"
                            android:includeFontPadding="false"
                            android:fontFamily="@font/lato_medium"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_video_libraby"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:padding="16dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="16dp">

                            <ImageView
                                android:id="@+id/iv_video_library"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerHorizontal="true"
                                android:contentDescription="TODO"
                                app:srcCompat="@drawable/ic_play_circle_filled_black_24dp" />

                            <TextView
                                android:id="@+id/videoLibrary_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/iv_video_library"
                                android:text="@string/video_library"
                                android:includeFontPadding="false"
                                android:fontFamily="@font/lato_medium"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_marginTop="10dp"/>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_today_patient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/iv_today_patients"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="TODO"
                            app:srcCompat="@drawable/ic_calendar_intele_24dp" />

                        <TextView
                            android:id="@+id/todaysVisits_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/iv_today_patients"
                            android:text="@string/today_visits"
                            android:includeFontPadding="false"
                            android:fontFamily="@font/lato_medium"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">



                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_help_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp">

                        <RelativeLayout
                            android:id="@+id/help_relative"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="16dp">

                            <ImageView
                                android:id="@+id/iv_whatsapp_helpline"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerHorizontal="true"
                                android:contentDescription="TODO"
                                app:srcCompat="@drawable/ic_icons8_whatsapp" />

                            <TextView
                                android:id="@+id/help_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/iv_whatsapp_helpline"
                                android:text="@string/Whatsapp_Help_Cardview"
                                android:includeFontPadding="false"
                                android:fontFamily="@font/lato_medium"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_marginTop="10dp"/>

                            <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->


                        </RelativeLayout>



                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginLeft="5dp"
                    android:id="@+id/cardview_active_patients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/iv_active_patients"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="TODO"
                            app:srcCompat="@drawable/ic_active_patients_black" />

                        <TextView
                            android:id="@+id/activeVisits_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/iv_active_patients"
                            android:text="@string/active_visits"
                            android:includeFontPadding="false"
                            android:fontFamily="@font/lato_medium"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_marginTop="10dp"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/manualsyncbutton"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_marginRight="40dp">

                            <TextView
                                android:id="@+id/lastsynctextview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:text="@string/lastsync"
                                android:includeFontPadding="false"
                                android:fontFamily="@font/lato_regular"
                                android:textSize="14sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/lastsyncago"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:visibility="visible"
                                android:textColor="@color/dot_dark_screen3"
                                android:includeFontPadding="false"
                                android:fontFamily="@font/lato_regular"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/manualsyncbutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/button_layerlist"
                            android:clickable="true"
                            android:drawableLeft="@drawable/ic_baseline_refresh_24"
                            android:drawablePadding="5dp"
                            android:paddingHorizontal="10dp"
                            android:text="@string/refresh"
                            android:textColor="@color/colorPrimary"
                            android:includeFontPadding="false"
                            android:fontFamily="@font/lato_regular"
                            android:textSize="15sp"
                            android:layout_weight="2"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <!--<include layout="@layout/content_home" />-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>